Updated logic for coin request generation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,4 +5,5 @@
 0004=Bad Request - Amount must be present and be a whole number
 0005=Bad Request - Amount is not a valid denomination
 0006=Bad Request - Amount is negative
+0007=Not Enough Coins
 9999=Generic Error - Please contact support
